--- a/wiki/Utilisation.wiki
+++ b/wiki/Utilisation.wiki
@@ -1,7 +1,23 @@
 #summary Utilisation
 
-= Caractères pour créer le format  =
+== Sous Ubuntu/Mandriva (gnome) ==
 
+ * Clic droit sur un dossier ou un fichier
+ * Scripts
+ * phpserenamer
+ * l'application se lance
+
+== Sous Xindows == 
+
+ * Clic droit sur un dossier
+ * phpserenamer
+ * l'application se lance
+
+== Personnalisation du format de sortie ==
+
+ Il est possible de personnaliser le format de sortie du fichier. Pour se faire, modifiez le contenu de la case format en utilisant les variables suivantes. Tout autre caractères tels que les tirets par exemples peuvent être utilisés pour séparer les différents éléments.
+
+_Caractères pour créer le format_ :
  * Numéro de la saison : *%s*
  * Numéro de la saison avec ajout d\'un zero devant si < 10 : *%j*
  * Numéro de l\'episode : *%e*
