--- a/wiki/EffectuerUnTag.wiki
+++ b/wiki/EffectuerUnTag.wiki
@@ -4,7 +4,7 @@
 
   * Effectuer une commande semblable à celle-ci 
 {{{
-$ svn copy https://phpserenamer.googlecode.com/svn/trunk https://phpserenamer.googlecode.com/svn/branches/0/0.1.0 -m "Tag de la 0.1.0 (Fixes issue 000)"
+$ svn copy https://phpserenamer.googlecode.com/svn/trunk https://phpserenamer.googlecode.com/svn/tags/0/0.1.0 -m "Tag de la 0.1.0 (Fixes issue 000)"
 }}}
 
   * Modifier la page du wiki changelog en reprenant la liste des modifications effecutées 
