Edited wiki page through web user interface.

--- a/wiki/EffectuerUnTag.wiki
+++ b/wiki/EffectuerUnTag.wiki
@@ -2,6 +2,8 @@
 
   * Créer un ticket (dans la milestone actuelle) indiquant de faire le tag 
 
+  * Modifier le numéro de version dans le fichier data/debianPackage/DEBIAN/control
+
   * Effectuer une commande semblable à celle-ci 
 {{{
 $ svn copy https://phpserenamer.googlecode.com/svn/trunk https://phpserenamer.googlecode.com/svn/tags/0/0.1.0 -m "Tag de la 0.1.0 (Fixes issue 000)"
@@ -13,4 +15,4 @@ ou si depuis branche
 $ svn copy https://phpserenamer.googlecode.com/svn/branches/0.1 https://phpserenamer.googlecode.com/svn/tags/0/0.1.2 -m "Tag de la 0.1.2(Fixes issue 44)"
 }}}
 
-  * Modifier la page du wiki changelog en reprenant la liste des modifications effecutées 
+  * Modifier la page du wiki changelog en reprenant la liste des modifications effectuées 
