Edited wiki page through web user interface.

--- a/wiki/EffectuerUnTag.wiki
+++ b/wiki/EffectuerUnTag.wiki
@@ -4,6 +4,8 @@
 
   * Modifier le numéro de version dans le fichier `data/debianPackage/DEBIAN/control`
 
+  * Modifier le numéro de version du aboutdialog (pour l'instant dans le srMenu)
+
   * Effectuer une commande semblable à celle-ci 
 {{{
 $ svn copy https://phpserenamer.googlecode.com/svn/trunk https://phpserenamer.googlecode.com/svn/tags/0/0.1.0 -m "Tag de la 0.1.0 (Fixes issue 000)"
