--- a/wiki/changelog.wiki
+++ b/wiki/changelog.wiki
@@ -1,6 +1,18 @@
 #summary Liste des changements
 #labels Featured
 
+= 0.2.0 =
+
+ * Ajout d'une interface de préférences
+ * Ajout du provider pour allociné
+ * Dossier par défaut 
+ * Provider par défaut
+ * Pattern par défaut
+ * Support des fichiers .mp4
+ * Correction pour les titres d'épisodes comportant une quote
+ * Séries avec accents mal découpées
+ * Modifications des items du menu action
+
 = 0.1.3 = 
 
  * Correction d'une "segmentation fault" apparaissant sur certaines configurations
