--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,18 +1,47 @@
 #summary Instructions d'installation
 #labels Phase-Deploy
 
-*Debian package pour Ubuntu 9.04*
+=Ubuntu=
+
+_Installation de php-gtk_
 
 Fonctionnant sous php-gtk, et celui-ci ne se trouvant pas dans les dépots officiels, téléchargez puis installez [http://phpserenamer.googlecode.com/files/php5-gtk2_2.0.1-1_i386.deb ceci] tout d'abord.
 
+_Deux modes d'insallation_
+
+Vous pouvez soit installer directement depuis le paquet deb, ou configurer vous sources pour utiliser le PPA (Personal Package Archives), ce qui permettra d'avoir automatiquement les mises à jour.
+
+==Depuis debian package==
+
 Téléchargez ensuite [http://phpserenamer.googlecode.com/files/phpserenamer_0.2.3_all.deb ceci] pour installer phpserenamer.
 
-La version 0.1.0 ne vérifie pas si l'extension php-gtk est activé ou non dans le fichier de configuration php, il faut donc ajouter la ligne 
-{{{
-extension=php_gtk2.so
-}}}
-au fichier /etc/php5/cli.ini (la prochaine version effectuera cette vérification)
+==Depuis PPA==
 
-*Installateur Windows*
+Ajout des deux lignes dans le sources.list
+(ou système -> administration -> sources de mise à jour -> logiciels de tierce partie -> ajouter) :
+{{{
+deb http://ppa.launchpad.net/adriengallou/ppa-phpserenamer/ubuntu jaunty main 
+deb-src http://ppa.launchpad.net/adriengallou/ppa-phpserenamer/ubuntu jaunty main 
+}}}
+
+Ajouter la clef à la liste des clef acceptables :
+{{{
+sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 46B20A27
+}}}
+
+Mettre à jour la liste des paquets disponibles :
+{{{
+sudo apt-get update
+}}}
+
+phpserenamer sera alors disponible via : 
+{{{
+sudo apt-get install phpserenamer
+}}}
+et les mises à jour seront alors proposées automatiquement.
+
+=Windows=
+
+Pas besoin d'installer php-gtk, celui-ci ce sera automatiquement installé en même temps que phpserenamer.
 
 Téléchargez [http://phpserenamer.googlecode.com/files/phpserenamer-0.2.3.exe ceci] puis suivez les instructions d'installation.
