Edited wiki page through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -13,6 +13,7 @@ _2009_11_03_ (r207)
  * Correction sur le provider imdb (issue 80)
  * Ajout de la traduction en Russe (issue 97)
  * Correction des boutons ne fonctionnant pas au clavier (issue 112)
+ * Suppression de la boite de recherche en bas à droite (issue 69)
  * Application disponible via un ppa (issue 117)
  * Application disponible en rpm (issue 126)
  * Application disponible en tgz (issue 127)
