--- a/wiki/MediaCenter.wiki
+++ b/wiki/MediaCenter.wiki
@@ -1,34 +1,30 @@
 #summary One-sentence summary of this page.
 
-= Introduction =
+=Introduction=
 
-Add your content here.
+Cette page à pour objectif de réunir les PATTERNS utilisaient par différents Media Center.
 
-= XBMC Media Center =
+=XBMC Media Center=
 
-Blabla
+*\NomSerie\Season 1\1x01.Pilot.avi*
+correspondant à l'épisode 1 de la saison 1 de la série " NomSerie "
 
-= MediaPortal =
+=MediaPortal=
 
-Blabla
+à complèter
 
-= MeediOS =
+=MeediOS=
 
-Blabla
+à complèter
 
-= xLobby =
+=xLobby=
 
-Blabla
+à complèter
 
-= SageTV Media Center =
+=SageTV Media Center=
 
-Blabla
+à complèter
 
-= GeeXboX =
+=GeeXboX=
 
-Blabla
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+à complèter
