Edited wiki page through web user interface.

--- a/wiki/MediaCenter.wiki
+++ b/wiki/MediaCenter.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Oh une jolie page wikiki !
 
 =Introduction=
 
@@ -6,8 +6,7 @@ Cette page à pour objectif de réunir les PATTERNS utilisaient par différents 
 
 =XBMC Media Center=
 
-*\NomSerie\Season 1\1x01.Pilot.avi*
-correspondant à l'épisode 1 de la saison 1 de la série " NomSerie "
+`\NomSerie\Season 1\1x01.Pilot.avi` correspondant à l'épisode 1 de la saison 1 de la série " NomSerie "
 
 =MediaPortal=
 
