--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,13 @@
 #summary Liste des changements
 #labels Featured
 
+= 0.3.2 =
+_2010_12_24_ (r266)
+ * Support des fichiers .vob (issue
+ * Correction problème encodage suite modifications sur allociné (issue 161)
+ * Correction nom de série mal récupéré sur allociné si celui-ci contient deux points (:) (issue 160)
+
+----
 = 0.3.1 =
 _2009_11_01_ (r218)
  * Correction du renommage sous vista (issue 134)
