Edited wiki page through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -11,6 +11,7 @@ _2010_07_04_ (r313)
  * Ajout de raccourcis clavier (issue 76)
  * Affichage du nom des sites plutôt que de leur code (issue 158)
  * Si plusieurs séries trouvées, ordre d'affichage plus pertinent (issue 168)
+ * Correction lancement depuis le menu démarrer sous windows (issue 169)
  * Diminution de la taille du projet (issue 111)
  * Optimisations (issue 108, issue 109)
 
